--- a/glide.html
+++ b/glide.html
@@ -2,81 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gliding Game Covers</title>
+  <title>Game Covers Glide Animation</title>
   <style>
-    body { background: #111; color: #fff; font-family: sans-serif; }
-    .glide-container {
+    body { background: #181818; color: #eee; }
+    .glide-row {
       position: relative;
-      width: 80vw;
-      height: 300px;
+      width: 90vw;
+      height: 140px;
       margin: 40px auto;
       overflow: hidden;
-      background: #222;
+      background: #2a2a2a;
       border-radius: 8px;
+      box-shadow: 0 3px 15px #0007;
     }
-    .gliding-image {
+    .glide-track {
       position: absolute;
-      top: 0;
+      white-space: nowrap;
       left: 0;
+      top: 0;
       height: 100%;
-      width: auto;
-      will-change: transform;
-      opacity: 0.96;
+      display: flex;
+      align-items: center;
+    }
+    .glide-img {
+      height: 120px;
+      margin: 0 16px;
       border-radius: 6px;
-      pointer-events: none;
+      box-shadow: 0 1px 6px #0006;
     }
   </style>
 </head>
 <body>
-  <h1 style="text-align:center;">Game Covers Gliding Animation</h1>
-  <div class="glide-container">
-    <img src="1st.jpg" class="gliding-image" id="img1" alt="Collage">
-    <img src="2nd.jpg" class="gliding-image" id="img2" alt="Strip">
-    <img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="gliding-image" id="img3" alt="Promo">
+  <h2 style="text-align:center;margin-bottom:0;">Game Covers Glide</h2>
+  <div class="glide-row" style="height: 140px;">
+    <div class="glide-track" id="track1">
+      <img src="1st.jpg" class="glide-img">
+      <img src="1st.jpg" class="glide-img">
+    </div>
+  </div>
+  <div class="glide-row" style="height: 140px;">
+    <div class="glide-track" id="track2">
+      <img src="2nd.jpg" class="glide-img">
+      <img src="2nd.jpg" class="glide-img">
+    </div>
+  </div>
+  <div class="glide-row" style="height: 140px;">
+    <div class="glide-track" id="track3">
+      <img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img">
+      <img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img">
+    </div>
   </div>
 
   <script>
-    // Gliding speeds
-    const speeds = [
-      0.25,    // slow (img1)
-      0.15,    // slower (img2)
-      0.07     // slowest (img3)
-    ];
+    // Set different speeds for each row (pixels per frame)
+    const speeds = [1.3, 0.85, 0.4]; // slow, slower, slowest
 
-    // Initial X positions
-    let positions = [0, 0, 0];
-
-    // Image elements
-    const imgs = [
-      document.getElementById('img1'),
-      document.getElementById('img2'),
-      document.getElementById('img3')
-    ];
-
-    function glide() {
-      imgs.forEach((img, i) => {
-        positions[i] -= speeds[i];
-        // If the image has moved fully left, reset it to right edge
-        if(img.width && Math.abs(positions[i]) > img.width)
-          positions[i] = imgs[0].parentElement.offsetWidth;
-        img.style.transform = `translateX(${positions[i]}px)`;
-      });
-      requestAnimationFrame(glide);
+    // For each row, animate the track to move left, loop seamlessly
+    function glideTrack(trackId, speed) {
+      const track = document.getElementById(trackId);
+      const imgs = track.getElementsByTagName('img');
+      let x = 0;
+      // each image width, assume all images in row are identical
+      function animate() {
+        x -= speed;
+        const imgWidth = imgs[0].offsetWidth + 32; // img + margin
+        if (-x >= imgWidth) x += imgWidth;
+        track.style.transform = `translateX(${x}px)`;
+        requestAnimationFrame(animate);
+      }
+      animate();
     }
 
-    // Wait until images are loaded for proper width
-    let loaded = 0;
-    imgs.forEach(img => {
-      img.onload = () => {
-        loaded++;
-        if(loaded === imgs.length) glide();
-      };
-      // In case images are cached and already loaded
-      if (img.complete) {
-        loaded++;
-        if(loaded === imgs.length) glide();
-      }
-    });
+    // Start animation, after all images render
+    window.onload = () => {
+      glideTrack('track1', speeds[0]);
+      glideTrack('track2', speeds[1]);
+      glideTrack('track3', speeds[2]);
+    };
   </script>
 </body>
 </html>
