--- a/glide.html
+++ b/glide.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hammer App – Unlock Your Entire Steam Library!</title>
-  <meta name="viewport" content="width=900">
+  <title>Hammer App – Unlock Your Steam Library!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background: #16171A;
@@ -13,98 +13,59 @@
       padding: 0;
     }
     .main {
-      max-width: 700px;
-      margin: 40px auto 20px auto;
-      padding: 30px 24px 16px 24px;
-      background: #23242bdd;
-      border-radius: 14px;
-      box-shadow: 0 4px 24px #0007;
+      max-width: 700px; margin: 40px auto 20px auto; padding: 30px 18px 16px 18px;
+      background: #23242bdd; border-radius: 14px; box-shadow: 0 4px 24px #0007;
     }
     h1 {
-      font-size: 2.4rem;
-      margin-bottom: 14px;
-      color: #ffae1a;
-      font-weight: bold;
-      letter-spacing: 1px;
-      text-shadow: 0 2px 8px #0005;
+      font-size: 2.1rem; margin-bottom: 10px; color: #ffae1a; font-weight: bold; text-shadow: 0 2px 6px #0005;
     }
-    h2 {
-      font-size: 1.5rem;
-      color: #f05e16;
-      margin-top: 16px;
-      letter-spacing: 0.2px;
-    }
-    .features {
-      font-size: 1.12rem;
-      margin: 22px 0 18px 0;
-      padding-left: 18px;
-    }
-    .features li {
-      margin: 10px 0;
-      line-height: 1.5;
-      list-style: "🔥 ";
-    }
+    h2 { font-size: 1.22rem; color: #f05e16; margin: 10px 0 14px 0; }
+    .features { font-size: 1.08rem; margin: 12px 0 10px 0; padding-left: 15px; }
+    .features li { margin: 10px 0; line-height: 1.45; list-style: "🔥 "; }
     .cta {
-      display: block;
-      text-align: center;
-      margin: 26px 0 15px 0;
+      display: block; text-align: center; margin: 20px 0 10px 0;
     }
     .cta-btn {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       background: linear-gradient(90deg, #f1ac3c 20%, #ff583c 90%);
-      color: #222;
-      border: none;
-      border-radius: 8px;
-      padding: 16px 48px;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 14px;
-      letter-spacing: 1px;
-      box-shadow: 0 2px 18px #0004;
-      transition: opacity 0.18s;
+      color: #222; border: none; border-radius: 8px; padding: 13px 32px;
+      font-weight: bold; cursor: pointer; margin-top: 10px; letter-spacing: 0.5px;
+      box-shadow: 0 2px 15px #0005; transition: opacity 0.19s;
     }
-    .cta-btn:hover {
-      opacity: 0.87;
+    .cta-btn:hover { opacity: 0.86;}
+    .price { font-size: 1.1rem; color: #ffd15c; margin-top: 6px; }
+    .video-wrap {
+      margin: 25px auto 16px auto; max-width: 560px; width: 100%;
+      border-radius: 10px; overflow: hidden; box-shadow: 0 1.5px 10px #000a;
+      background: #23242bdd;
+      aspect-ratio: 16/9;
+      position: relative;
     }
-    .price {
-      font-size: 1.14rem;
-      color: #ffd15c;
-      margin-top: 8px;
+    .video-wrap iframe, .video-wrap embed {
+      width: 100%; height: 100%; border: none;
+      display: block;
     }
     /* Glider section */
     .glide-row {
-      position: relative;
-      width: 100vw;
-      max-width: 880px;
-      height: 140px;
-      margin: 38px auto 0 auto;
-      overflow: hidden;
-      background: #161920;
-      border-radius: 10px;
-      box-shadow: 0 2px 12px #0009;
+      position: relative; width: 100vw; max-width: 880px; height: 110px;
+      margin: 30px auto 0 auto; overflow: hidden;
+      background: #161920; border-radius: 10px; box-shadow: 0 2px 12px #0009;
     }
     .glide-track {
-      position: absolute;
-      white-space: nowrap;
-      left: 0;
-      top: 0;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      will-change: transform;
+      position: absolute; white-space: nowrap; left: 0; top: 0; height: 100%; display: flex; align-items: center; will-change: transform;
     }
     .glide-img {
-      height: 120px;
-      margin: 0 16px;
-      border-radius: 7px;
-      box-shadow: 0 1.5px 9px #0007;
-      opacity: 0.94;
-      background: #25282c;
+      height: 94px; margin: 0 12px; border-radius: 8px; box-shadow: 0 1.5px 8px #0007; opacity: 0.96; background: #25282c;
     }
     @media (max-width: 800px) {
-      .main {max-width: 98vw;}
-      .glide-row {max-width: 98vw;}
-      .glide-img {height: 88px;}
+      .main { max-width: 99vw; padding: 18px 5vw 10vw 5vw;}
+      .glide-row {max-width: 99vw; height: 68px;}
+      .glide-img {height: 58px;}
+    }
+    @media screen and (max-width: 500px) {
+      h1 {font-size: 1.3rem;}
+      h2 {font-size: 1.01rem;}
+      .main {padding: 8vw 4vw 7vw 4vw;}
     }
   </style>
 </head>
@@ -119,9 +80,9 @@
       <li><b>Always Updated:</b> Tap “Update GAME” to get the latest build instantly.</li>
       <li><b>Cloud Saves:</b> Keep your saves and achievements 100% intact.</li>
       <li><b>Revive Classics:</b> Restore lost games with just one click.</li>
-      <li><b>Multi-Platform Support:</b> Works seamlessly on Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more.</li>
+      <li><b>Multi-Platform Support:</b> Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more.</li>
       <li><b>Android Companion App:</b> Add games directly from your Android phone for ultimate convenience.</li>
-      <li><b>Upcoming Chrome Extension:</b> Easily add games with a simple "Add Game" button straight from the Steam store!</li>
+      <li><b>Upcoming Chrome Extension:</b> Easily add games with "Add Game" button on Steam store!</li>
       <li><b>Easy Access:</b> No account setup needed—perfect for all gamers!</li>
     </ul>
     <div class="cta">
@@ -133,22 +94,26 @@
         No more waiting, no more limits!
       </div>
     </div>
+    <!-- Video Player -->
+    <div class="video-wrap">
+      <iframe src="https://streamable.com/e/i3nad1" allowfullscreen></iframe>
+    </div>
   </div>
 
   <!-- Gliding Game Gallery (bottom) -->
-  <div class="glide-row" style="height: 140px;">
+  <div class="glide-row">
     <div class="glide-track" id="track1">
       <img src="1st.jpg" class="glide-img" alt="Collage">
       <img src="1st.jpg" class="glide-img" alt="Collage">
     </div>
   </div>
-  <div class="glide-row" style="height: 140px;">
+  <div class="glide-row">
     <div class="glide-track" id="track2">
       <img src="2nd.jpg" class="glide-img" alt="Strip">
       <img src="2nd.jpg" class="glide-img" alt="Strip">
     </div>
   </div>
-  <div class="glide-row" style="height: 140px;">
+  <div class="glide-row">
     <div class="glide-track" id="track3">
       <img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img" alt="Promo">
       <img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img" alt="Promo">
@@ -157,24 +122,20 @@
 
   <script>
     // Set different speeds (pixels per frame)
-    const speeds = [1.18, 0.73, 0.42];
-
-    // Helper for each track's animation
+    const speeds = [1.17, 0.71, 0.33];
     function glideTrack(trackId, speed) {
       const track = document.getElementById(trackId);
       const imgs = track.getElementsByTagName('img');
       let x = 0;
       function animate() {
         x -= speed;
-        const imgWidth = imgs[0].offsetWidth + 32; // img + margin
+        const imgWidth = imgs[0].offsetWidth + 24;
         if (-x >= imgWidth) x += imgWidth;
         track.style.transform = `translateX(${x}px)`;
         requestAnimationFrame(animate);
       }
       animate();
     }
-
-    // Start after all images are loaded
     window.onload = () => {
       glideTrack('track1', speeds[0]);
       glideTrack('track2', speeds[1]);
