--- a/glide.html
+++ b/glide.html
@@ -4,24 +4,85 @@
   <meta charset="UTF-8">
   <title>Hammer App – Unlock Your Steam Library!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS STARTS HERE -->
   <style>
-    body {
-      background: #16171A;
-      color: #EAEAEA;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
+    html, body { margin:0; padding:0; height:100%; overflow-x: hidden; background:#111; scroll-behavior:smooth;}
+    body { font-family: 'Segoe UI', Arial, sans-serif; color: #eaeaea; min-height: 100vh;}
+    /* --- Video Background Animation Styles --- */
+    .video-bg-container {
+      position: fixed; top:0;left:0;width:100vw;height:100vh;
+      overflow: hidden;
+      z-index: -1;
+      pointer-events: none;
+      background: #000;
+      transition: background 1s;
     }
+    .zoom-video {
+      position: absolute; left:0; top:0; width:100vw; height:100vh; object-fit:cover;
+      filter: brightness(0.5) saturate(1.07);
+      border-radius: 24px;
+      transition: transform 1.2s cubic-bezier(.73,0,.27,1.02), border-radius 1.3s;
+      z-index:1;
+    }
+    .triple-videos {
+      position:absolute;
+      left:0; top:0;
+      width:100vw;height:100vh;display: flex;justify-content: center;align-items: center; gap:3vw;
+      transition:opacity 1.1s;
+      opacity: 0;
+      z-index:2;
+    }
+    .triple-videos video {
+      width: 30vw; min-width: 240px; max-width: 480px;
+      height: 46vh; min-height:120px;
+      object-fit: cover; border-radius:2.4vw;
+      filter: brightness(0.62) saturate(1.08);
+      box-shadow: 0 6px 36px #0009;
+    }
+
+    /* Overlay Ads */
+    .ad-overlay, .ad-overlay2 {
+      position: absolute; left:0; width: 100vw; text-align: center; z-index: 10;
+      text-shadow: 0 4px 32px #000a, 0 1px 8px #222b;
+      font-weight: bold;
+      pointer-events: none;
+      letter-spacing:0.05em;
+      user-select:none;
+    }
+    .ad-overlay {
+      top: 13vh;
+      color: #fff;
+      font-size: 2.25rem;
+      opacity:1; transition: opacity 1.1s;
+    }
+    .ad-overlay2 {
+      bottom: 13vh;
+      color: #ffae1a;
+      font-size: 2rem;
+      opacity:0; transition:opacity 1.1s;
+    }
+    .show-triple .ad-overlay  {opacity: 0;}
+    .show-triple .ad-overlay2 {opacity: 1;}
+    /* Responsive for mobile */
+    @media (max-width: 800px) {
+      .ad-overlay,.ad-overlay2 { font-size:1.15rem;}
+      .triple-videos video {width:96vw;height:18vh;}
+    }
+    @media (max-width:480px){
+      .ad-overlay, .ad-overlay2 {font-size:1rem;}
+      .triple-videos video {width:97vw;height:15vh;}
+    }
+
+    /* --- Main Page Styles from previous answer --- */
     .main {
-      max-width: 700px; margin: 40px auto 24px auto; padding: 30px 18px 14px 18px;
+      max-width: 700px; margin: 0 auto 24px auto; padding: 46px 18px 14px 18px;
       background: #23242bdd; border-radius: 14px; box-shadow: 0 4px 24px #0007;
+      position: relative; z-index: 2;
+      margin-top: 100vh; /* pushed down to be under hero video background */
     }
     h1 { font-size: 2.1rem; margin-bottom: 10px; color: #ffae1a; font-weight: bold; text-shadow: 0 2px 6px #0005;}
     h2 { font-size: 1.25rem; color: #f05e16; margin: 16px 0 12px 0; }
     .features { font-size: 1.08rem; margin: 12px 0 18px 0; padding-left: 15px; }
-    .features li { margin: 10px 0; line-height: 1.45; list-style: "🔥 "; }
+    .features li { margin: 10px 0; line-height: 1.45; list-style: "🔥 ";}
     .cta { display: block; text-align: center; margin: 20px 0 12px 0;}
     .cta-btn {
       font-size: 1.1rem;
@@ -44,7 +105,7 @@
       display: block;
     }
 
-    /* FAQ + Pros/Cons style */
+    /* FAQ + Pros/Cons style (copied from previous page) */
     .faq-section {
       max-width: 600px; margin: 40px auto 0 auto; border-radius:12px; background: #212227ee;
       box-shadow: 0 2px 16px #0005; padding: 20px 15px; 
@@ -53,30 +114,16 @@
     .faq-list { }
     .faq-item { margin-bottom:12px;}
     .faq-q {
-      width: 100%; text-align:left; background: #26282f;
-      color: #ffe0a0; font-size: 1.07rem; border:none; outline:none; padding:12px;
-      border-radius:8px; cursor:pointer; font-weight: 500; letter-spacing:0.1px;
-      transition: background 0.16s;
-      box-shadow: 0 0.5px 2px #0003;
+      width: 100%; text-align:left; background: #26282f; color: #ffe0a0; font-size: 1.07rem; border:none; outline:none; padding:12px; border-radius:8px; cursor:pointer; font-weight: 500; letter-spacing:0.1px; transition: background 0.16s; box-shadow: 0 0.5px 2px #0003;
     }
     .faq-q:hover { background: #343750;}
-    .faq-a {
-      max-height: 0; overflow: hidden; opacity: 0;
-      transition: max-height 0.44s cubic-bezier(.5,1.4,.7,1.01), opacity 0.27s linear;
-      background: #272831e5; color:#eae5d8; border-radius: 0 0 9px 9px;
-      margin-top:0; padding:0 18px;
-      box-shadow: 0 1.5px 6px #0002 inset;
-      transform: translateY(-8px);
-    }
-    .faq-item.show .faq-a {
-      max-height: 350px; opacity: 1; margin-top:4px; padding:14px 18px 14px 18px; 
-      transform: none;
-    }
+    .faq-a { max-height: 0; overflow: hidden; opacity: 0; transition: max-height 0.44s cubic-bezier(.5,1.4,.7,1.01), opacity 0.27s linear; background: #272831e5; color:#eae5d8; border-radius: 0 0 9px 9px; margin-top:0; padding:0 18px; box-shadow: 0 1.5px 6px #0002 inset; transform: translateY(-8px);}
+    .faq-item.show .faq-a { max-height: 350px; opacity: 1; margin-top:4px; padding:14px 18px 14px 18px; transform: none;}
     .pros { color:#baffca; font-size:1rem;}
     .cons { color:#ff9c9c; font-size:1rem;}
     .pros li, .cons li {margin-bottom: 7px;}
 
-    /* Glider/slider styles */
+    /* Glider/slider styles (copied from before) */
     .glide-row {
       position: relative; width: 100vw; max-width: 880px; height: 110px;
       margin: 35px auto 0 auto; overflow: hidden;
@@ -98,10 +145,24 @@
       h2 {font-size: 1.01rem;}
     }
   </style>
-  <!-- CSS ENDS HERE -->
-
 </head>
+
 <body>
+  <!-- Video Background Zoom Effect Section -->
+  <div class="video-bg-container" id="bgHero">
+    <video class="zoom-video" id="zoomVid" src="bg1.mp4" autoplay loop muted playsinline preload="auto"></video>
+    <div class="triple-videos" id="tripleVid">
+      <video src="bg1.mp4" loop autoplay muted playsinline></video>
+      <video src="bg2.mp4" loop autoplay muted playsinline></video>
+      <video src="bg3.mp4" loop autoplay muted playsinline></video>
+    </div>
+    <div class="ad-overlay" id="adText1">Hammer Steam Library Adder<br>
+      <span style="font-size:1.2rem;font-weight:400;">Unlock and unleash your Steam!</span>
+    </div>
+    <div class="ad-overlay2" id="adText2">Massive <b>75,000 games</b> and titles in your arsenal</div>
+  </div>
+
+  <!-- Main section, all your previous content integrated below -->
   <div class="main">
     <h1>🚀🔥 Hammer App</h1>
     <h2>Unlock Your Entire Steam Library in One Click!</h2>
@@ -130,86 +191,86 @@
     <div class="video-wrap">
       <iframe src="https://streamable.com/e/i3nad1" allowfullscreen></iframe>
     </div>
-  </div>
 
-  <!-- FAQ Section -->
-  <div class="faq-section">
-    <h2 class="faq-title">❓ Frequently Asked Questions</h2>
-    <div class="faq-list">
-      <div class="faq-item">
-        <button class="faq-q">Is Hammer App safe and legal?</button>
-        <div class="faq-a">
-          Absolutely! Hammer downloads directly from Valve’s servers using your Steam credentials. There’s no piracy, no server spoofing, and your login info never goes to us!
+    <!-- FAQ Section -->
+    <div class="faq-section">
+      <h2 class="faq-title">❓ Frequently Asked Questions</h2>
+      <div class="faq-list">
+        <div class="faq-item">
+          <button class="faq-q">Is Hammer App safe and legal?</button>
+          <div class="faq-a">
+            Absolutely! Hammer downloads directly from Valve’s servers using your Steam credentials. There’s no piracy, no server spoofing, and your login info never goes to us!
+          </div>
         </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-q">Will my Steam achievements and saves work?</button>
-        <div class="faq-a">
-          Yes—Hammer fully supports Steam Cloud and achievements. Everything stays synced and up-to-date.
+        <div class="faq-item">
+          <button class="faq-q">Will my Steam achievements and saves work?</button>
+          <div class="faq-a">
+            Yes—Hammer fully supports Steam Cloud and achievements. Everything stays synced and up-to-date.
+          </div>
         </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-q">Can I use Hammer App anywhere?</button>
-        <div class="faq-a">
-          Yes, there are no region locks! Play and restore games worldwide.
+        <div class="faq-item">
+          <button class="faq-q">Can I use Hammer App anywhere?</button>
+          <div class="faq-a">
+            Yes, there are no region locks! Play and restore games worldwide.
+          </div>
         </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-q">What platforms are supported?</button>
-        <div class="faq-a">
-          Hammer runs on Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more. There’s also an Android companion app.
+        <div class="faq-item">
+          <button class="faq-q">What platforms are supported?</button>
+          <div class="faq-a">
+            Hammer runs on Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more. There’s also an Android companion app.
+          </div>
         </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-q">Do I need a subscription?</button>
-        <div class="faq-a">
-          No subscription needed! Just a one-time payment of PHP 699 or \$13.
+        <div class="faq-item">
+          <button class="faq-q">Do I need a subscription?</button>
+          <div class="faq-a">
+            No subscription needed! Just a one-time payment of PHP 699 or \$13.
+          </div>
         </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-q">Can I add games while on mobile?</button>
-        <div class="faq-a">
-          Yes! The Android app lets you add games on the go, and the upcoming Chrome extension will let you add games in 1 click from the Steam store.
+        <div class="faq-item">
+          <button class="faq-q">Can I add games while on mobile?</button>
+          <div class="faq-a">
+            Yes! The Android app lets you add games on the go, and the upcoming Chrome extension will let you add games in 1 click from the Steam store.
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Pros and Cons Section -->
-  <div class="faq-section" style="margin-top:36px;">
-    <h2 class="faq-title">✨ Pros & Cons</h2>
-    <div class="faq-list">
-      <div class="faq-item">
-        <button class="faq-q">Show Pros</button>
-        <div class="faq-a">
-          <ul class="pros">
-            <li>✔️ Huge library (75,000+ games, including delisted gems)</li>
-            <li>✔️ No region locks, play anywhere</li>
-            <li>✔️ Fast downloads via Valve's servers</li>
-            <li>✔️ Always up to date with 1 click</li>
-            <li>✔️ Steam Cloud support (saves & achievements stay intact)</li>
-            <li>✔️ Revives classics and lost titles</li>
-            <li>✔️ Multi-platform (Windows, Steam Deck, ROG Ally, etc.)</li>
-            <li>✔️ Mobile companion app + upcoming Chrome extension</li>
-            <li>✔️ Easy, no account needed</li>
-            <li>✔️ One-time price, no subscriptions</li>
-          </ul>
+    <!-- Pros and Cons Section -->
+    <div class="faq-section" style="margin-top:36px;">
+      <h2 class="faq-title">✨ Pros & Cons</h2>
+      <div class="faq-list">
+        <div class="faq-item">
+          <button class="faq-q">Show Pros</button>
+          <div class="faq-a">
+            <ul class="pros">
+              <li>✔️ Huge library (75,000+ games, including delisted gems)</li>
+              <li>✔️ No region locks, play anywhere</li>
+              <li>✔️ Fast downloads via Valve's servers</li>
+              <li>✔️ Always up to date with 1 click</li>
+              <li>✔️ Steam Cloud support (saves & achievements stay intact)</li>
+              <li>✔️ Revives classics and lost titles</li>
+              <li>✔️ Multi-platform (Windows, Steam Deck, ROG Ally, etc.)</li>
+              <li>✔️ Mobile companion app + upcoming Chrome extension</li>
+              <li>✔️ Easy, no account needed</li>
+              <li>✔️ One-time price, no subscriptions</li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-q">Show Cons</button>
-        <div class="faq-a">
-          <ul class="cons">
-            <li>❌ Windows/Linux required for main app</li>
-            <li>❌ No Mac/iOS version (yet)</li>
-            <li>❌ You need your own Steam account with licenses</li>
-            <li>❌ Some DRM-protected games may have extra steps to restore</li>
-            <li>❌ Delisted games availability depends on your Steam ownership</li>
-          </ul>
+        <div class="faq-item">
+          <button class="faq-q">Show Cons</button>
+          <div class="faq-a">
+            <ul class="cons">
+              <li>❌ Windows/Linux required for main app</li>
+              <li>❌ No Mac/iOS version (yet)</li>
+              <li>❌ You need your own Steam account with licenses</li>
+              <li>❌ Some DRM-protected games may have extra steps to restore</li>
+              <li>❌ Delisted games availability depends on your Steam ownership</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </div><!-- end .main -->
 
   <!-- Gliding Game Gallery (bottom) -->
   <div class="glide-row">
@@ -231,21 +292,33 @@
     </div>
   </div>
 
-  <!-- JS for collapsible FAQ/Pros/Cons and slider -->
+  <!-- JS for scroll-based video bg/FAQ/collapsible/glider -->
   <script>
-    // Collapsible FAQ/Pros/Cons logic with elegant transition
-    document.querySelectorAll('.faq-q').forEach(btn => {
-      btn.addEventListener('click', function() {
-        const item = this.parentElement;
-        item.classList.toggle('show');
-        // Optional: close siblings
-        document.querySelectorAll('.faq-item').forEach(other => {
-          if (other !== item) other.classList.remove('show');
-        });
-      });
+    // Hero video animation
+    const videoList=["bg1.mp4","bg2.mp4","bg3.mp4"];
+    const rand = Math.floor(Math.random()*3);
+    const vid = document.getElementById("zoomVid");
+    vid.src = videoList[rand];
+    vid.style.transform = "scale(1.18)";
+
+    const triple = document.getElementById("tripleVid");
+    triple.style.opacity = 0;
+    const ad1 = document.getElementById("adText1");
+    const ad2 = document.getElementById("adText2");
+    let trig = false;
+
+    window.addEventListener('scroll', function() {
+      if(window.scrollY > 120 && !trig){
+        trig = true;
+        vid.style.transform = "scale(0.64) translateY(-9vh)";
+        ad1.style.opacity = 0;
+        triple.style.opacity = 1;
+        document.getElementById("bgHero").classList.add("show-triple");
+        setTimeout(()=>{ad2.style.opacity=1;},400);
+      }
     });
 
-    // Glide effect
+    // Glide Effect
     const speeds = [1.17, 0.71, 0.33];
     function glideTrack(trackId, speed) {
       const track = document.getElementById(trackId);
@@ -265,6 +338,17 @@
       glideTrack('track2', speeds[1]);
       glideTrack('track3', speeds[2]);
     };
+
+    // FAQ/Pros-Cons accordion
+    document.querySelectorAll('.faq-q').forEach(btn => {
+      btn.addEventListener('click', function() {
+        const item = this.parentElement;
+        item.classList.toggle('show');
+        document.querySelectorAll('.faq-item').forEach(other => {
+          if (other !== item) other.classList.remove('show');
+        });
+      });
+    });
   </script>
 </body>
 </html>
